# slidesplit

./: Cargo.toml
docs/: tasks.md
src/: lib.rs  main.rs
tests/: e2e.rs  unit.rs
