[package]
name = "slidesplit"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.24"
img_hash = "3"
tempfile = "3"
walkdir = "2"
rayon = "1"
# Downloads a static ffmpeg/ffprobe at runtime if system ffmpeg is missing
ffmpeg-sidecar = "2.1.0"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
which = "6"
image = "0.24"  # used to synthesize frames in tests
